--- a/.github/workflows/build-kube-ovn-base-dpdk.yaml
+++ b/.github/workflows/build-kube-ovn-base-dpdk.yaml
@@ -17,6 +17,8 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v4
+        with:
+          ref: ${{ matrix.branch }}
       - uses: docker/setup-buildx-action@v3
 
       - name: Build
@@ -27,8 +29,9 @@ jobs:
       - name: Upload image to artifact
         uses: actions/upload-artifact@v3
         with:
-          name: image-amd64-dpdk
+          name: image-amd64-dpdk-${{ matrix.branch }}
           path: image-amd64-dpdk.tar
+          retention-days: 7
 
   push:
     strategy:
@@ -44,11 +47,13 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v4
+        with:
+          ref: ${{ matrix.branch }}
 
       - name: Download image
         uses: actions/download-artifact@v3
         with:
-          name: image-amd64-dpdk
+          name: image-amd64-dpdk-${{ matrix.branch }}
 
       - name: Load Image
         run: |
