--- a/.github/workflows/build-kube-ovn-base-dpdk.yaml
+++ b/.github/workflows/build-kube-ovn-base-dpdk.yaml
@@ -1,6 +1,15 @@
 name: Build Base DPDK
 on:
   workflow_dispatch:
+    inputs:
+      branch:
+        description: "Select branch"
+        required: true
+        type: choice
+        options:
+          - master
+          - release-1.12-cmss
+          - release-1.12
   schedule:
     - cron: "20 19 * * *"
 
@@ -17,16 +26,21 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v4
+        if: github.event.inputs.branch == matrix.branch
         with:
           ref: ${{ matrix.branch }}
+
       - uses: docker/setup-buildx-action@v3
+        if: github.event.inputs.branch == matrix.branch
 
       - name: Build
+        if: github.event.inputs.branch == matrix.branch
         run: |
           make base-amd64-dpdk
           make base-tar-amd64-dpdk
 
       - name: Upload image to artifact
+        if: github.event.inputs.branch == matrix.branch
         uses: actions/upload-artifact@v3
         with:
           name: image-amd64-dpdk-${{ matrix.branch }}
@@ -47,19 +61,23 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v4
+        if: github.event.inputs.branch == matrix.branch
         with:
           ref: ${{ matrix.branch }}
 
       - name: Download image
+        if: github.event.inputs.branch == matrix.branch
         uses: actions/download-artifact@v3
         with:
           name: image-amd64-dpdk-${{ matrix.branch }}
 
       - name: Load Image
+        if: github.event.inputs.branch == matrix.branch
         run: |
           docker load --input image-amd64-dpdk.tar
 
       - name: Push
+        if: github.event.inputs.branch == matrix.branch
         env:
           DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
