--- a/.github/workflows/scheduled-e2e.yaml
+++ b/.github/workflows/scheduled-e2e.yaml
@@ -257,6 +257,7 @@ jobs:
           - release-1.12
           - release-1.11
           - release-1.9
+          - release-1.12-mc
         ip-family:
           - ipv4
           - ipv6
@@ -570,6 +571,7 @@ jobs:
           - master
           - release-1.12
           - release-1.11
+          - release-1.12-mc
     steps:
       - uses: actions/checkout@v4
 
@@ -642,6 +644,7 @@ jobs:
         branch:
           - master
           - release-1.12
+          - release-1.12-mc
   
     steps:
       - uses: actions/checkout@v4
@@ -924,6 +927,7 @@ jobs:
           - release-1.12
           - release-1.11
           - release-1.9
+          - release-1.12-mc
         ssl:
           - "true"
           - "false"
@@ -1244,6 +1248,7 @@ jobs:
         branch:
           - master
           - release-1.12
+          - release-1.12-mc
     steps:
       - uses: actions/checkout@v4
       - uses: actions/setup-go@v4
