--- a/.github/workflows/build-kube-ovn-base-dpdk.yaml
+++ b/.github/workflows/build-kube-ovn-base-dpdk.yaml
@@ -9,6 +9,7 @@ on:
         options:
           - master
           - release-1.12
+          - release-1.12-mc
   schedule:
     - cron: "20 19 * * *"
 
@@ -20,6 +21,7 @@ jobs:
         branch:
           - master
           - release-1.12
+          - release-1.12-mc
     name: Build AMD64
     runs-on: ubuntu-22.04
     steps:
@@ -52,6 +54,7 @@ jobs:
         branch:
           - master
           - release-1.12
+          - release-1.12-mc
     needs:
       - build-amd64
     name: push
