--- a/charts/values.yaml
+++ b/charts/values.yaml
@@ -149,7 +149,7 @@ ovs-ovn:
     cpu: "200m"
     memory: "200Mi"
   limits:
-    cpu: "1000m"
+    cpu: "2"
     memory: "1000Mi"
 kube-ovn-controller:
   requests:
