--- a/Makefile.e2e
+++ b/Makefile.e2e
@@ -43,6 +43,8 @@ ifeq ($(E2E_CILIUM_CHAINING),true)
 K8S_CONFORMANCE_E2E_SKIP += "sig-network.*Networking.*Feature:SCTPConnectivity"
 endif
 
+GINKGO_COMMON_OPT = --randomize-all --vv
+
 GINKGO_PARALLEL_OPT = -p
 ifeq ($(shell echo $${CI:-false}),true)
 GINKGO_PARALLEL_OPT = --procs $$(($$(nproc) * $(GINKGO_PARALLEL_MULTIPLIER)))
@@ -74,7 +76,7 @@ e2e-build:
 .PHONY: k8s-conformance-e2e
 k8s-conformance-e2e:
 	ginkgo build $(E2E_BUILD_FLAGS) ./test/e2e/k8s-network
-	ginkgo $(GINKGO_PARALLEL_OPT) --randomize-all -v --timeout=1h \
+	ginkgo $(GINKGO_COMMON_OPT) $(GINKGO_PARALLEL_OPT) --timeout=1h \
 		$(call ginkgo_option,focus,$(K8S_CONFORMANCE_E2E_FOCUS)) \
 		$(call ginkgo_option,skip,$(K8S_CONFORMANCE_E2E_SKIP)) \
 		./test/e2e/k8s-network/k8s-network.test -- $(TEST_BIN_ARGS)
@@ -82,7 +84,7 @@ k8s-conformance-e2e:
 .PHONY: k8s-netpol-e2e
 k8s-netpol-e2e:
 	ginkgo build $(E2E_BUILD_FLAGS) ./test/e2e/k8s-network
-	ginkgo --randomize-all -v --timeout=2h \
+	ginkgo $(GINKGO_COMMON_OPT) --timeout=2h \
 		$(call ginkgo_option,focus,$(K8S_NETPOL_E2E_FOCUS)) \
 		$(call ginkgo_option,skip,$(K8S_NETPOL_E2E_SKIP)) \
 		./test/e2e/k8s-network/k8s-network.test -- $(TEST_BIN_ARGS)
@@ -107,7 +109,7 @@ kube-ovn-conformance-e2e:
 	E2E_BRANCH=$(E2E_BRANCH) \
 	E2E_IP_FAMILY=$(E2E_IP_FAMILY) \
 	E2E_NETWORK_MODE=$(E2E_NETWORK_MODE) \
-	ginkgo $(GINKGO_PARALLEL_OPT) --randomize-all -v --timeout=30m \
+	ginkgo $(GINKGO_COMMON_OPT) $(GINKGO_PARALLEL_OPT) --timeout=30m \
 		--focus=CNI:Kube-OVN ./test/e2e/kube-ovn/kube-ovn.test -- $(TEST_BIN_ARGS)
 
 .PHONY: kube-ovn-ic-conformance-e2e
@@ -116,7 +118,7 @@ kube-ovn-ic-conformance-e2e:
 	E2E_BRANCH=$(E2E_BRANCH) \
 	E2E_IP_FAMILY=$(E2E_IP_FAMILY) \
 	E2E_NETWORK_MODE=$(E2E_NETWORK_MODE) \
-	ginkgo $(GINKGO_PARALLEL_OPT) --randomize-all -v \
+	ginkgo $(GINKGO_COMMON_OPT) $(GINKGO_PARALLEL_OPT) \
 		--focus=CNI:Kube-OVN ./test/e2e/ovn-ic/ovn-ic.test -- $(TEST_BIN_ARGS)
 
 .PHONY: kube-ovn-submariner-conformance-e2e
@@ -131,7 +133,7 @@ kube-ovn-lb-svc-conformance-e2e:
 	E2E_BRANCH=$(E2E_BRANCH) \
 	E2E_IP_FAMILY=$(E2E_IP_FAMILY) \
 	E2E_NETWORK_MODE=$(E2E_NETWORK_MODE) \
-	ginkgo $(GINKGO_PARALLEL_OPT) --randomize-all -v \
+	ginkgo $(GINKGO_COMMON_OPT) $(GINKGO_PARALLEL_OPT) \
 		--focus=CNI:Kube-OVN ./test/e2e/lb-svc/lb-svc.test -- $(TEST_BIN_ARGS)
 
 .PHONY: vip-conformance-e2e
@@ -140,7 +142,7 @@ vip-conformance-e2e:
 	E2E_BRANCH=$(E2E_BRANCH) \
 	E2E_IP_FAMILY=$(E2E_IP_FAMILY) \
 	E2E_NETWORK_MODE=$(E2E_NETWORK_MODE) \
-	ginkgo $(GINKGO_PARALLEL_OPT) --randomize-all -v \
+	ginkgo $(GINKGO_COMMON_OPT) $(GINKGO_PARALLEL_OPT) \
 		--focus=CNI:Kube-OVN ./test/e2e/vip/vip.test -- $(TEST_BIN_ARGS)
 
 .PHONY: iptables-vpc-nat-gw-conformance-e2e
@@ -149,7 +151,7 @@ iptables-vpc-nat-gw-conformance-e2e:
 	E2E_BRANCH=$(E2E_BRANCH) \
 	E2E_IP_FAMILY=$(E2E_IP_FAMILY) \
 	E2E_NETWORK_MODE=$(E2E_NETWORK_MODE) \
-	ginkgo $(GINKGO_PARALLEL_OPT) --randomize-all -v \
+	ginkgo $(GINKGO_COMMON_OPT) $(GINKGO_PARALLEL_OPT) \
 		--focus=CNI:Kube-OVN ./test/e2e/iptables-vpc-nat-gw/iptables-vpc-nat-gw.test -- $(TEST_BIN_ARGS)
 
 .PHONY: ovn-vpc-nat-gw-conformance-e2e
@@ -158,7 +160,7 @@ ovn-vpc-nat-gw-conformance-e2e:
 	E2E_BRANCH=$(E2E_BRANCH) \
 	E2E_IP_FAMILY=$(E2E_IP_FAMILY) \
 	E2E_NETWORK_MODE=$(E2E_NETWORK_MODE) \
-	ginkgo $(GINKGO_PARALLEL_OPT) --randomize-all -v \
+	ginkgo $(GINKGO_COMMON_OPT) $(GINKGO_PARALLEL_OPT) \
 		--focus=CNI:Kube-OVN ./test/e2e/ovn-vpc-nat-gw/ovn-vpc-nat-gw.test -- $(TEST_BIN_ARGS)
 
 .PHONY: kube-ovn-ha-e2e
@@ -167,7 +169,7 @@ kube-ovn-ha-e2e:
 	E2E_BRANCH=$(E2E_BRANCH) \
 	E2E_IP_FAMILY=$(E2E_IP_FAMILY) \
 	E2E_NETWORK_MODE=$(E2E_NETWORK_MODE) \
-	ginkgo $(GINKGO_PARALLEL_OPT) --randomize-all -v \
+	ginkgo $(GINKGO_COMMON_OPT) $(GINKGO_PARALLEL_OPT) \
 		--focus=CNI:Kube-OVN ./test/e2e/ha/ha.test -- $(TEST_BIN_ARGS)
 
 .PHONY: kube-ovn-security-e2e
@@ -176,7 +178,7 @@ kube-ovn-security-e2e:
 	E2E_BRANCH=$(E2E_BRANCH) \
 	E2E_IP_FAMILY=$(E2E_IP_FAMILY) \
 	E2E_NETWORK_MODE=$(E2E_NETWORK_MODE) \
-	ginkgo $(GINKGO_PARALLEL_OPT) --randomize-all -v \
+	ginkgo $(GINKGO_COMMON_OPT) $(GINKGO_PARALLEL_OPT) \
 		--focus=CNI:Kube-OVN ./test/e2e/security/security.test -- $(TEST_BIN_ARGS)
 
 .PHONY: kube-ovn-kubevirt-e2e
@@ -185,7 +187,7 @@ kube-ovn-kubevirt-e2e:
 	E2E_BRANCH=$(E2E_BRANCH) \
 	E2E_IP_FAMILY=$(E2E_IP_FAMILY) \
 	E2E_NETWORK_MODE=$(E2E_NETWORK_MODE) \
-	ginkgo $(GINKGO_PARALLEL_OPT) --randomize-all -v \
+	ginkgo $(GINKGO_COMMON_OPT) $(GINKGO_PARALLEL_OPT) \
 		--focus=CNI:Kube-OVN ./test/e2e/kubevirt/kubevirt.test -- $(TEST_BIN_ARGS)
 
 .PHONY: kube-ovn-webhook-e2e
@@ -194,7 +196,7 @@ kube-ovn-webhook-e2e:
 	E2E_BRANCH=$(E2E_BRANCH) \
 	E2E_IP_FAMILY=$(E2E_IP_FAMILY) \
 	E2E_NETWORK_MODE=$(E2E_NETWORK_MODE) \
-	ginkgo $(GINKGO_PARALLEL_OPT) --randomize-all -v \
+	ginkgo $(GINKGO_COMMON_OPT) $(GINKGO_PARALLEL_OPT) \
 		--focus=CNI:Kube-OVN ./test/e2e/webhook/webhook.test -- $(TEST_BIN_ARGS)
 
 .PHONY: kubectl-ko-log
