--- a/.github/workflows/build-x86-image.yaml
+++ b/.github/workflows/build-x86-image.yaml
@@ -277,12 +277,14 @@ jobs:
         run: make kind-install-${{ matrix.mode }}-${{ matrix.ip-family }}
 
       - name: Run E2E
-        working-directory: ${{ env.E2E_DIR }}
         env:
           E2E_BRANCH: ${{ github.base_ref || github.ref_name }}
           E2E_IP_FAMILY: ${{ matrix.ip-family }}
           E2E_NETWORK_MODE: ${{ matrix.mode }}
-        run: make k8s-conformance-e2e
+        run: |
+          mv -fv Makefile.e2e "${E2E_DIR}"
+          cd "${E2E_DIR}"
+          make k8s-conformance-e2e
 
       - name: kubectl ko log
         if: failure()
