add: MASTER_NODES_LABEL
Signed-off-by: Andrei Kvapil <kvapss@gmail.com>

--- a/charts/templates/monitor-deploy.yaml
+++ b/charts/templates/monitor-deploy.yaml
@@ -108,7 +108,9 @@ spec:
             timeoutSeconds: 3
       nodeSelector:
         kubernetes.io/os: "linux"
-        kube-ovn/role: "master"
+        {{- with splitList "=" .Values.MASTER_NODES_LABEL }}
+        {{ index . 0 }}: "{{ if eq (len .) 2 }}{{ index . 1 }}{{ end }}"
+        {{- end }}
       volumes:
         - name: host-run-ovs
           hostPath:
