--- a/kubeovn-helm/templates/ovsovn-ds.yaml
+++ b/kubeovn-helm/templates/ovsovn-ds.yaml
@@ -120,7 +120,7 @@ spec:
               cpu: 200m
               memory: 200Mi
             limits:
-              cpu: 1000m
+              cpu: "2"
               memory: 1000Mi
       nodeSelector:
         kubernetes.io/os: "linux"
