--- a/.github/workflows/scheduled-e2e.yaml
+++ b/.github/workflows/scheduled-e2e.yaml
@@ -24,7 +24,7 @@ jobs:
       matrix:
         branch:
           - master
-          - release-1.12-cmss
+          - release-1.12-mc
           - release-1.12
           - release-1.11
           - release-1.9
@@ -115,7 +115,7 @@ jobs:
       matrix:
         branch:
           - master
-          - release-1.12-cmss
+          - release-1.12-mc
           - release-1.12
           - release-1.11
           - release-1.9
@@ -281,7 +281,7 @@ jobs:
       matrix:
         branch:
           - master
-          - release-1.12-cmss
+          - release-1.12-mc
           - release-1.12
           - release-1.11
           - release-1.9
@@ -342,7 +342,7 @@ jobs:
       matrix:
         branch:
           - master
-          - release-1.12-cmss
+          - release-1.12-mc
           - release-1.12
           - release-1.11
           - release-1.9
@@ -418,81 +418,6 @@ jobs:
           E2E_NETWORK_MODE: ${{ matrix.mode }}
         run: make kube-ovn-conformance-e2e
 
-  kube-ovn-ic-conformance-e2e:
-    name: Kube-OVN IC Conformance E2E
-    runs-on: ubuntu-22.04
-    timeout-minutes: 30
-    strategy:
-      fail-fast: false
-      matrix:
-        branch:
-          - master
-          - release-1.12-cmss
-          - release-1.12
-          - release-1.11
-          - release-1.9
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-go@v4
-        with:
-          go-version: ${{ env.GO_VERSION || '' }}
-          go-version-file: go.mod
-          check-latest: true
-          cache: false
-
-      - name: Export Go full version
-        run: echo "GO_FULL_VER=$(go version | awk '{print $3}')" >> "$GITHUB_ENV"
-
-      - name: Go cache
-        uses: actions/cache@v4
-        with:
-          path: |
-            ~/.cache/go-build
-            ~/go/pkg/mod
-          key: ${{ runner.os }}-e2e-${{ env.GO_FULL_VER }}-x86-${{ hashFiles('**/go.sum') }}
-          restore-keys: ${{ runner.os }}-e2e-${{ env.GO_FULL_VER }}-x86-
-
-      - name: Create branch directory
-        run: mkdir -p test/e2e/kube-ovn/branches/${{ matrix.branch }}
-
-      - name: Check out branch
-        uses: actions/checkout@v3
-        with:
-          ref: ${{ matrix.branch }}
-          fetch-depth: 1
-          path: test/e2e/kube-ovn/branches/${{ matrix.branch }}
-
-      - name: Install kind
-        uses: helm/kind-action@v1.8.0
-        with:
-          version: v0.20.0
-          install_only: true
-
-      - name: Install ginkgo
-        working-directory: ${{ env.E2E_DIR }}
-        run: go install -v -mod=mod github.com/onsi/ginkgo/v2/ginkgo
-
-      - name: Create kind cluster
-        working-directory: test/e2e/kube-ovn/branches/${{ matrix.branch }}
-        run: |
-          sudo pip3 install j2cli
-          sudo pip3 install "j2cli[yaml]"
-          sudo PATH=~/.local/bin:$PATH make kind-init-ovn-ic
-          sudo cp -r /root/.kube/ ~/.kube/
-          sudo chown -R $(id -un). ~/.kube/
-
-      - name: Install Kube-OVN
-        working-directory: test/e2e/kube-ovn/branches/${{ matrix.branch }}
-        run: |
-          version=$(grep -E '^VERSION="v([0-9]+\.){2}[0-9]+"$' dist/images/install.sh | head -n1 | awk -F= '{print $2}' | tr -d '"')
-          docker pull kubeovn/kube-ovn:$version
-          VERSION=$version make kind-install-ovn-ic
-
-      - name: Run E2E
-        env:
-          E2E_BRANCH: ${{ matrix.branch }}
-        run: make kube-ovn-ic-conformance-e2e
-
   ha-installation-test:
     name: HA Installation Test
     runs-on: ubuntu-22.04
@@ -550,7 +475,7 @@ jobs:
       matrix:
         branch:
           - master
-          - release-1.12-cmss
+          - release-1.12-mc
           - release-1.12
           - release-1.11
           - release-1.9
@@ -602,7 +527,7 @@ jobs:
       matrix:
         branch:
           - master
-          - release-1.12-cmss
+          - release-1.12-mc
           - release-1.12
           - release-1.11
           - release-1.9
@@ -657,7 +582,7 @@ jobs:
       matrix:
         branch:
           - master
-          - release-1.12-cmss
+          - release-1.12-mc
           - release-1.12
           - release-1.11
           - release-1.9
@@ -712,7 +637,7 @@ jobs:
       matrix:
         branch:
           - master
-          - release-1.12-cmss
+          - release-1.12-mc
           - release-1.12
           - release-1.11
     steps:
@@ -786,7 +711,7 @@ jobs:
       matrix:
         branch:
           - master
-          - release-1.12-cmss
+          - release-1.12-mc
           - release-1.12
   
     steps:
@@ -859,7 +784,7 @@ jobs:
       matrix:
         branch:
           - master
-          - release-1.12-cmss
+          - release-1.12-mc
           - release-1.12
     steps:
       - uses: actions/checkout@v3
@@ -931,7 +856,7 @@ jobs:
       matrix:
         branch:
           - master
-          - release-1.12-cmss
+          - release-1.12-mc
           - release-1.12
           - release-1.11
           - release-1.9
@@ -983,7 +908,7 @@ jobs:
       matrix:
         branch:
           - master
-          - release-1.12-cmss
+          - release-1.12-mc
           - release-1.12
           - release-1.11
           - release-1.9
@@ -1072,7 +997,7 @@ jobs:
       matrix:
         branch:
           - master
-          - release-1.12-cmss
+          - release-1.12-mc
           - release-1.12
           - release-1.11
           - release-1.9
@@ -1267,7 +1192,7 @@ jobs:
       matrix:
         branch:
           - master
-          - release-1.12-cmss
+          - release-1.12-mc
           - release-1.12
     steps:
       - uses: actions/checkout@v3
@@ -1326,7 +1251,7 @@ jobs:
       matrix:
         branch:
           - master
-          - release-1.12-cmss
+          - release-1.12-mc
           - release-1.12
     steps:
       - uses: actions/checkout@v3
@@ -1397,7 +1322,7 @@ jobs:
       matrix:
         branch:
           - master
-          - release-1.12-cmss
+          - release-1.12-mc
           - release-1.12
     steps:
       - uses: actions/checkout@v3
