--- a/.github/workflows/build-windows.yaml
+++ b/.github/workflows/build-windows.yaml
@@ -23,7 +23,7 @@ concurrency:
 
 env:
   GO_VERSION: ''
-  GOSEC_VERSION: '2.17.0'
+  GOSEC_VERSION: '2.18.2'
 
 jobs:
   filter:
@@ -33,8 +33,8 @@ jobs:
       build-ovs-ovn: ${{ steps.filter.outputs.windows-ovs-ovn }}
       build-kube-ovn: ${{ steps.filter.outputs.windows-kube-ovn }}
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-go@v4
+      - uses: actions/checkout@v4
+      - uses: actions/setup-go@v5
         with:
           go-version: ${{ env.GO_VERSION || '' }}
           go-version-file: go.mod
@@ -64,7 +64,7 @@ jobs:
             echo "- $f" | tee -a $filter
           done
 
-      - uses: dorny/paths-filter@v2
+      - uses: dorny/paths-filter@v3
         id: filter
         with:
           base: ${{ github.base_ref || github.ref_name }}
@@ -83,14 +83,14 @@ jobs:
           git clone https://git.code.sf.net/p/pthreads4w/code pthreads4w\code
 
       - name: Check out OVS
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           repository: openvswitch/ovs
           ref: branch-3.1
           path: ovs
 
       - name: Check out OVN
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
         with:
           repository: ovn-org/ovn
           ref: branch-22.12
@@ -164,13 +164,13 @@ jobs:
           C:\msys64\usr\bin\bash.exe -lc "cd '%_ovn_dir%' && make install"
 
       - name: Upload OVS
-        uses: actions/upload-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: ovs-win64
           path: ovs\windows\ovs-windows-installer\bin\x64\Release\OpenvSwitch.msi
 
       - name: Upload OVN
-        uses: actions/upload-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: ovn-win64
           path: C:\ovn
@@ -181,8 +181,8 @@ jobs:
     runs-on: windows-2019
     if: github.event_name == 'release' || github.event_name == 'workflow_dispatch' || needs.filter.outputs.build-kube-ovn == 'true'
     steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-go@v4
+      - uses: actions/checkout@v4
+      - uses: actions/setup-go@v5
         with:
           go-version: ${{ env.GO_VERSION || '' }}
           go-version-file: go.mod
@@ -218,7 +218,7 @@ jobs:
           make build-go-windows
 
       - name: Upload Binaries
-        uses: actions/upload-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: kube-ovn-bin
           path: |
@@ -232,7 +232,7 @@ jobs:
       - build-kube-ovn
     runs-on: windows-2019
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
       - name: Download Kube-OVN binaries
         uses: actions/download-artifact@v3
@@ -268,7 +268,7 @@ jobs:
           Copy-Item kube-ovn-daemon.exe -Destination kube-ovn/bin
 
       - name: Upload package
-        uses: actions/upload-artifact@v3
+        uses: actions/download-artifact@v4
         with:
           name: kube-ovn-win64
           path: |
